syntax="proto3";

package user;

option go_package = "./user";

service UserService {
    rpc LoginUser (LoginRequest) returns (LoginResponse) {}
    rpc RegisterUser (RegisterRequest) returns (RegisterResponse) {}
}


message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}


message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string token = 1;
}


